# NeonSnake-ACR

./: .gitignore  App.js  App.tsx  README.md  constants.js  constants.ts  gameUtils.js  gameUtils.ts  index.css  index.html  index.tsx  metadata-1.json  metadata.json  package-lock.json  package.json  tsc_errors.txt  tsc_output.txt  tsc_output2.txt  tsconfig.json  types.js  types.ts  vite-env.d.ts  vite.config.ts  wrangler.json  wrangler.jsonc
archive/: data.ts  types.ts
components/: ArchiveTerminal.tsx  ArrowControls.tsx  BootSequence.tsx  BrakeButton.tsx  CharacterSelectMenu.tsx  CosmeticsMenu.tsx  DifficultySelectMenu.tsx  HUDPreview.tsx  LevelUpScreen.tsx  ScreenTransition.tsx  SettingsMenu.tsx  SnakeGame.js  SnakeGame.tsx  SnakePreview.tsx  SwipeControls.tsx  TitleScreen.tsx  VirtualJoystick.tsx
config/: index.ts  quality.ts
docs/: VISUAL_PARITY_REPORT.md  analysis.md
engine/: SimulationBridge.ts  index.ts  loop.ts  messages.ts  pools.ts  spatial.ts
game/: audio.ts  descriptors.js  descriptors.ts  difficultyScaler.ts  gameUtils.js  gameUtils.ts  traitResolver.ts  useAnalytics.js  useAnalytics.ts  useCollisions.js  useCollisions.ts  useCombat.js  useCombat.ts  useFX.js  useFX.ts  useGameLoop.js  useGameLoop.ts  useGameState.js  useGameState.ts  useInput.js  useInput.ts  useMovement.js  useMovement.ts  useMusic.js  useMusic.ts  usePendingInput.ts  useProgression.js  useProgression.ts  useRendering.js  useRendering.ts  useSimulationBridge.ts  useSpawner.js  useSpawner.ts  useStageController.js  useStageController.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+249 files in other folders)
